Fixing bulk action hidden by tabs

--- a/src/pages/apt/apt.scss
+++ b/src/pages/apt/apt.scss
@@ -62,6 +62,7 @@ page-apt {
 
   //footer
   ion-footer {
+    bottom: 50px;
     background-color: rgba(44, 48, 48, 0.514);
   }
 
